fl_dll/library.h

extern void readI(int *val, int set);
extern int sumMatIPtrPtr(int rows, int cols, const int** mat);
extern short sumArrS(const short *arr, short count);
extern void readS(short *val, short set);
extern int sumMatSPtrPtr(int rows, int cols, const short ** mat);
extern char sumArrB(const char *arr, char count);
extern void readB(char *val, char set);
extern int sumMatBPtrPtr(int rows, int cols, const char ** mat);