src/test/java/jpassport/test/extracted/library_h.java


    /**
     * {@snippet lang=c :
     * extern void readI(int *val, int set)
     * }
     */
    public static void readI(MemorySegment val, int set) {
        var mh$ = readI.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("readI", val, set);
            }
            mh$.invokeExact(val, set);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumMatIPtrPtr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_INT,
            library_h.C_INT,
            library_h.C_INT,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumMatIPtrPtr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int sumMatIPtrPtr(int rows, int cols, const int **mat)
     * }
     */
    public static FunctionDescriptor sumMatIPtrPtr$descriptor() {
        return sumMatIPtrPtr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int sumMatIPtrPtr(int rows, int cols, const int **mat)
     * }
     */
    public static MethodHandle sumMatIPtrPtr$handle() {
        return sumMatIPtrPtr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int sumMatIPtrPtr(int rows, int cols, const int **mat)
     * }
     */
    public static MemorySegment sumMatIPtrPtr$address() {
        return sumMatIPtrPtr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int sumMatIPtrPtr(int rows, int cols, const int **mat)
     * }
     */
    public static int sumMatIPtrPtr(int rows, int cols, MemorySegment mat) {
        var mh$ = sumMatIPtrPtr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumMatIPtrPtr", rows, cols, mat);
            }
            return (int)mh$.invokeExact(rows, cols, mat);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumArrS {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_SHORT,
            library_h.C_POINTER,
            library_h.C_SHORT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumArrS");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern short sumArrS(const short *arr, short count)
     * }
     */
    public static FunctionDescriptor sumArrS$descriptor() {
        return sumArrS.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern short sumArrS(const short *arr, short count)
     * }
     */
    public static MethodHandle sumArrS$handle() {
        return sumArrS.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern short sumArrS(const short *arr, short count)
     * }
     */
    public static MemorySegment sumArrS$address() {
        return sumArrS.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern short sumArrS(const short *arr, short count)
     * }
     */
    public static short sumArrS(MemorySegment arr, short count) {
        var mh$ = sumArrS.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumArrS", arr, count);
            }
            return (short)mh$.invokeExact(arr, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class readS {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            library_h.C_POINTER,
            library_h.C_SHORT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("readS");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void readS(short *val, short set)
     * }
     */
    public static FunctionDescriptor readS$descriptor() {
        return readS.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void readS(short *val, short set)
     * }
     */
    public static MethodHandle readS$handle() {
        return readS.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void readS(short *val, short set)
     * }
     */
    public static MemorySegment readS$address() {
        return readS.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void readS(short *val, short set)
     * }
     */
    public static void readS(MemorySegment val, short set) {
        var mh$ = readS.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("readS", val, set);
            }
            mh$.invokeExact(val, set);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumMatSPtrPtr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_INT,
            library_h.C_INT,
            library_h.C_INT,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumMatSPtrPtr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int sumMatSPtrPtr(int rows, int cols, const short **mat)
     * }
     */
    public static FunctionDescriptor sumMatSPtrPtr$descriptor() {
        return sumMatSPtrPtr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int sumMatSPtrPtr(int rows, int cols, const short **mat)
     * }
     */
    public static MethodHandle sumMatSPtrPtr$handle() {
        return sumMatSPtrPtr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int sumMatSPtrPtr(int rows, int cols, const short **mat)
     * }
     */
    public static MemorySegment sumMatSPtrPtr$address() {
        return sumMatSPtrPtr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int sumMatSPtrPtr(int rows, int cols, const short **mat)
     * }
     */
    public static int sumMatSPtrPtr(int rows, int cols, MemorySegment mat) {
        var mh$ = sumMatSPtrPtr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumMatSPtrPtr", rows, cols, mat);
            }
            return (int)mh$.invokeExact(rows, cols, mat);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumArrB {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_CHAR,
            library_h.C_POINTER,
            library_h.C_CHAR
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumArrB");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern char sumArrB(const char *arr, char count)
     * }
     */
    public static FunctionDescriptor sumArrB$descriptor() {
        return sumArrB.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern char sumArrB(const char *arr, char count)
     * }
     */
    public static MethodHandle sumArrB$handle() {
        return sumArrB.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern char sumArrB(const char *arr, char count)
     * }
     */
    public static MemorySegment sumArrB$address() {
        return sumArrB.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern char sumArrB(const char *arr, char count)
     * }
     */
    public static byte sumArrB(MemorySegment arr, byte count) {
        var mh$ = sumArrB.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumArrB", arr, count);
            }
            return (byte)mh$.invokeExact(arr, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class readB {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            library_h.C_POINTER,
            library_h.C_CHAR
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("readB");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void readB(char *val, char set)
     * }
     */
    public static FunctionDescriptor readB$descriptor() {
        return readB.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void readB(char *val, char set)
     * }
     */
    public static MethodHandle readB$handle() {
        return readB.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void readB(char *val, char set)
     * }
     */
    public static MemorySegment readB$address() {
        return readB.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void readB(char *val, char set)
     * }
     */
    public static void readB(MemorySegment val, byte set) {
        var mh$ = readB.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("readB", val, set);
            }
            mh$.invokeExact(val, set);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumMatBPtrPtr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_INT,
            library_h.C_INT,
            library_h.C_INT,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumMatBPtrPtr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int sumMatBPtrPtr(int rows, int cols, const char **mat)
     * }
     */
    public static FunctionDescriptor sumMatBPtrPtr$descriptor() {
        return sumMatBPtrPtr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int sumMatBPtrPtr(int rows, int cols, const char **mat)
     * }
     */
    public static MethodHandle sumMatBPtrPtr$handle() {
        return sumMatBPtrPtr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int sumMatBPtrPtr(int rows, int cols, const char **mat)
     * }
     */
    public static MemorySegment sumMatBPtrPtr$address() {
        return sumMatBPtrPtr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int sumMatBPtrPtr(int rows, int cols, const char **mat)
     * }
     */
    public static int sumMatBPtrPtr(int rows, int cols, MemorySegment mat) {
        var mh$ = sumMatBPtrPtr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumMatBPtrPtr", rows, cols, mat);
            }
            return (int)mh$.invokeExact(rows, cols, mat);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
